sumo/tests/dfrouter/errors/detector_files/broken_detectors_file1c/errors.dfrouter
Error: Not numeric lane position within 'input_messstrecke.det.xml' (detector id='MQ11Fs1').
Quitting (on error).
